RESOLVED FIXED107833
REGRESSION (r135628-135632): Double box shadow failure to render
https://bugs.webkit.org/show_bug.cgi?id=107833
Summary REGRESSION (r135628-135632): Double box shadow failure to render
Nathan Crank
Reported 2013-01-24 08:45:30 PST
I have found a strange bug in the nightlies of webkit and canary. If you check out http://codepen.io/nathancrank/pen/JCFyk in release Safari or Chrome, you'll see the second box shadow render on the submit input. If you load it in nightlies it will only render the first shadow, unless you add a third shadow declaration to it.
Attachments
Patch (6.81 KB, patch)
2013-01-28 14:34 PST, Justin Novosad
no flags
Patch for landing (7.34 KB, patch)
2013-01-29 07:27 PST, Justin Novosad
no flags
Patch for landing (7.45 KB, patch)
2013-01-29 07:30 PST, Justin Novosad
no flags
Patch for landing (8.34 KB, patch)
2013-01-29 12:20 PST, Justin Novosad
no flags
Alexey Proskuryakov
Comment 1 2013-01-25 10:27:22 PST
Two potentially related revisions in the range: <http://trac.webkit.org/changeset/135629> Adding occlusion detection to reduce overdraw in RenderBox background rendering <http://trac.webkit.org/changeset/135632> [CSS3 Backgrounds and Borders] Implement new CSS3 background-position parsing.
Alexey Proskuryakov
Comment 2 2013-01-25 10:27:44 PST
Justin Novosad
Comment 3 2013-01-28 08:39:02 PST
(In reply to comment #1) Just verified that the regression was in fact caused by http://trac.webkit.org/changeset/135629
Justin Novosad
Comment 4 2013-01-28 14:34:53 PST
Simon Fraser (smfr)
Comment 5 2013-01-28 14:45:21 PST
Comment on attachment 185066 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=185066&action=review > Source/WebCore/ChangeLog:8 > + Reviewed by NOBODY (OOPS!). > + > + Test: fast/backgrounds/gradient-background-shadow.html Please explain the bug and how you fixed it, identifying the revision that caused it. > Source/WebCore/ChangeLog:12 > + Changeing occlusion culling test to never cull background color Changing
WebKit Review Bot
Comment 6 2013-01-29 00:53:44 PST
Comment on attachment 185066 [details] Patch Attachment 185066 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/16201044 New failing tests: fast/backgrounds/gradient-background-shadow.html
Justin Novosad
Comment 7 2013-01-29 07:27:42 PST
Created attachment 185243 [details] Patch for landing
Justin Novosad
Comment 8 2013-01-29 07:30:40 PST
Created attachment 185245 [details] Patch for landing
WebKit Review Bot
Comment 9 2013-01-29 08:21:19 PST
Comment on attachment 185245 [details] Patch for landing Rejecting attachment 185245 [details] from commit-queue. New failing tests: fast/backgrounds/gradient-background-shadow.html Full output: http://queues.webkit.org/results/16195168
Justin Novosad
Comment 10 2013-01-29 11:16:31 PST
(In reply to comment #9) > (From update of attachment 185245 [details]) > Rejecting attachment 185245 [details] from commit-queue. > > New failing tests: > fast/backgrounds/gradient-background-shadow.html > Full output: http://queues.webkit.org/results/16195168 The failure in the new test looks like it is caused by a regression that must have landed since yesterday. Looks like there are LSB discrepancies in gradient rendering. This is probably limited to the skia port. fmalita, you know anything about this?
Justin Novosad
Comment 11 2013-01-29 11:38:33 PST
Geez, looks like I was using a stale checkout. Related regressions were added to test expectations 3 weeks ago with: http://trac.webkit.org/changeset/139512 We should fix skia gradients so that we can re-enable some ref tests.
Justin Novosad
Comment 12 2013-01-29 12:13:55 PST
The nature of the problem with skia gradients is understood and documented here: https://code.google.com/p/chromium/issues/detail?id=169602 Until that is fixed, I'll just put the new test in chromium TestExpectations. It passes on other WK ports.
Justin Novosad
Comment 13 2013-01-29 12:20:29 PST
Created attachment 185282 [details] Patch for landing
WebKit Review Bot
Comment 14 2013-01-29 13:33:39 PST
Comment on attachment 185282 [details] Patch for landing Clearing flags on attachment: 185282 Committed r141160: <http://trac.webkit.org/changeset/141160>
WebKit Review Bot
Comment 15 2013-01-29 13:33:44 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.